--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
+/*Seleccionar etiqueta*/
 img {
     width: 200px;
-    height: auto;
+    height: auto
 }
 
-* {
+*{
     margin: 0;
     padding: 0;
 }
@@ -11,8 +12,16 @@ img {
 #intro {
     width: 100vw;
     height: 25vh;
-    background-color: tomato;
+    background-color: peru;
     position: relative;
+}
+
+h1{
+    color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    display: inline;
 }
 
 #about {
@@ -22,25 +31,68 @@ img {
     position: relative;
 }
 
+#about h2{
+    position: absolute;
+    left: 50%;
+}
+
+#about p{
+    position: absolute;
+    top: 67%
+}
+
 #funfact {
     width: 100vw;
     height: 25vh;
-    background-color: yellow;
+    background-color: cadetblue;
     position: relative;
 }
 
+#funfact h2{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+#fun p{
+    position: absolute;
+    left: 90%;
+    top: 80%;
+}
 #contact {
     width: 100vw;
     height: 25vh;
-    background-color: peru;
+    background-color: royalblue;
+
     position: relative;
 }
 
-h1 {
-    color: white;
+#contact h2{
     position: absolute;
     left: 50%;
-    display: inline;
-    text-align: justify ;
+    top: 50%;
 }
 
+.span1{
+    position: absolute;
+    left: 40%;
+    top: 80%;
+    margin-right:100px;
+    margin-left:100px 
+}
+
+.span2{
+    position: absolute;
+    left: 44.5%;
+    top: 80%;
+    margin-right:100px;
+    margin-left:100px 
+}
+
+.span3{
+    position: absolute;
+    left: 50%;
+    top: 80%;
+    margin-right:100px;
+    margin-left:100px 
+}
